# smush-discord

./: .rustc_info.json  Cargo.toml  README.md
doc/discord_server/: fn.handle_pre_entry_skyline_internal_install_hook.html  fn.handle_pre_rebirth_skyline_internal_install_hook.html  fn.handle_sub_damage_uniq_process_init_skyline_internal_install_hook.html  fn.set_player_information.html  index.html  static.handle_sub_damage_uniq_process_init_skyline_internal_original_fn.html
doc/implementors/core/marker/: trait.Freeze.js  trait.Sync.js
doc/implementors/std/panic/: trait.UnwindSafe.js
doc/serde_json/: enum.Value.html  struct.Number.html
doc/serde_json/value/: enum.Value.html
doc/skyline/: index.html
doc/smush_discord_shared/: enum.Stage.html  index.html  struct.Info.html
doc/src/skyline/: build.rs.html  error.rs.html  nn.rs.html  nro.rs.html  patching.rs.html
doc/src/smush_discord_shared/: atomic_f32.rs.html  lib.rs.html
shared/src/: lib.rs
src/: main.rs
x86_64-unknown-linux-gnu/debug/.fingerprint/discord_server-e36a6d8fc283cb56/: doc-lib-discord_server  (+1 more)
x86_64-unknown-linux-gnu/doc/: search-index.js
x86_64-unknown-linux-gnu/doc/discord_server/: fn.handle_pre_entry.html  fn.handle_pre_rebirth.html  fn.handle_sub_damage_uniq_process_init.html  fn.main.html  static.handle_pre_entry_skyline_internal_original_fn.html  static.handle_pre_rebirth_skyline_internal_original_fn.html
x86_64-unknown-linux-gnu/doc/skyline/: all.html  sidebar-items.js
x86_64-unknown-linux-gnu/doc/smush_discord_shared/: enum.Character.html  struct.Player.html
(+32 files in other folders)
