[package]
name = "smush_discord_client"
version = "0.1.1"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smush_info_shared = { git = "https://github.com/leeevye/smush_info_shared.git" }
serde_json = "1"
dirs = "2"
rustcord = { git = "https://github.com/AregevDev/rustcord.git" }
